# lucia-rust

./: .gitattributes  .gitignore  Cargo.toml  Makefile  Mewofile  README.md  build.rs
.github/workflows/: benchmark-nightly.yml  build-wasm.yml  generate_todos.yml  release-beta.yml  release-nightly.yml  release-stable.yml  run-tests-beta.yml  run-tests-nightly.yml  run-tests-stable.yml  run-tests.yml  test-lib-linux.yml  test-linux.yml  test-macos.yml  test-windows.yml
src/: interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/env/: config.json  libs.json
src/env/Docs/: .gitignore  CHANGELOG.md  NOTE_TO_CONTRIBUTORS.md  benchmarks.md  c-ffi.md  config-guide.md  contributing.md  conventions.md  embedding.md  installation-guide.md  introduction.md  known-issues.md  language-syntax.md  repl-guide.md  todos.md  versioning.md
src/env/Docs/examples/: 01_hello_world.lc  02_fib.lc  02_hello_world_lasm.lc  02_is_prime.lc  03_bubble_sort.lc  03_prime_checker.lc  04_bubble_sort.lc  04_fib.lc  05_simple_repl_calc.lc  06_hello_world_lasm.lc  07_tic_tac_toe.lc  08_game_of_life.lc  08_rule110.lc  09_game_of_life.lc  09_rule110.lc  10_bouncing_square_raylib.lc  10_sierpinski_triangle.lc  11_custom_lang.lc  11_custom_lang_in_lucia.lc  11_quine.lc  12_utah_teapot.lc  13_custom_lang.lc  README.md
src/env/Docs/examples/fibonacci/: 01_fib_recursive.lc  02_fib_iterative.lc  03_fib_binet.lc
src/env/Docs/examples/tests/: 01_functions.lc  02_operators.lc  03_lists.lc  04_variables.lc  05_for_loops.lc
src/env/assets/: Makefile.old  lucia-mode.el  lucia-syntax-1.0.0.vsix  lucia-syntax.vsix
src/env/assets/include/: lucia.h  lucia.hpp  lucia_size_check.h
src/env/assets/installer/: LuciaInstaller.nsi
src/env/bundler/: bundle.rs
src/env/bundler/template/: common.rs  runner_template.rs
src/env/core/: build.rs  config.rs  errors.rs  functions.rs  native.rs  pattern_reg.rs  preprocessor.rs  statements.rs  types.rs  utils.rs  value.rs  variables.rs
src/env/helpers/: config.rs  functions.rs  native.rs  structs.rs  utils.rs
src/env/libs/clib/: __init__.rs  _tcc.rs  main.rs
src/env/libs/collections/: __init__.rs  deprecated_stuff.rs  main.rs
src/env/libs/config/: __init__.rs
src/env/libs/elevator/: __init__.rs  main.rs  utils.rs
src/env/libs/fs/: __init__.rs  main.rs
src/env/libs/hash/: main.rs
src/env/libs/json/: __init__.rs  main.rs
src/env/libs/lasm/: __init__.rs  cpu.rs  main.rs
src/env/libs/lasm/cpu/: __init__.rs
src/env/libs/libload/: __init__.rs  ffi.rs  main.rs
src/env/libs/math/: __init__.rs  main.rs
src/env/libs/nest/: __init__.rs  main.rs
src/env/libs/os/: __init__.rs  main.rs
src/env/libs/random/: __init__.rs  main.rs
src/env/libs/regex/: __init__.rs  main.rs  regex_engine.rs
src/env/libs/requests/: __init__.lc  main.lc  manifest.json
src/env/libs/std/: __init__.lc  _import.lc  _main.lc  assert.lc  hashset.lc  io.lc  lambda.lc  lazy.lc  macros.lc  manifest.json  math.lc  ops.lc  token_macros.lc  types.lc
src/env/libs/time/: __init__.rs  main.rs
src/env/runtime/: build.rs  cache.rs  config.rs  errors.rs  fmt.rs  functions.rs  gc.rs  generators.rs  internal_structs.rs  libs.rs  main_wasm.rs  modules.rs  native.rs  objects.rs  pattern_reg.rs  plugins.rs  precompile.rs  preprocessor.rs  repl.rs  statements.rs  static_checker.rs  structs_and_enums.rs  token_cache.rs  tokens.rs  types.rs  utils.rs  value.rs  variables.rs  wasm.rs
src/env/transpiler/: transpiler.rs
src/tests/: test.lucia
temp/: temp.rs
tests/: 01_function_calls.lc  02_operators.lc  03_lists.lc  04_variables.lc  05_for_loops.lc  05_loops.lc  06_strings.lc  07_chained.lc  07_test_chained.lc  08_indexes.lc  09_if.lc  10_preprocessor.lc  11_other_stmts.lc  11_try_and_forget.lc  12_function_defs.lc  13_types.lc  14_import.lc  15_macros.lc  16_pointers.lc  17_numbers.lc  18_defer_and_scopes.lc  19_match.lc  20_bitwise_op.lc  21_unpack_assign.lc  22_lambdas.lc  22_syntax_rules.lc  23_if_then.lc  24_generators.lc  24_if_then.lc  25_generators.lc  25_where.lc  26_enums.lc  26_where.lc  27_structs.lc  28_impl_types.lc  29_op_overload.lc  30_generics.lc  31_function_effects.lc
tests/lib_tests/: test.c  test.cpp
tests/source/: run_benchmarks.rs  run_tests.rs
