[package]
name = "lucia"
version = "2.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
colored = "3.0.0"
imagnum = "0.2.12"
once_cell = { version = "1.21.3", default-features = false }
regex = "1.11.2"
rand = { version = "0.9.2", default-features = false, features = [ "small_rng" ] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
fancy-regex = "0.16.1"
bincode = "2.0.1"
zstd = "0.13.3"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "wav"] }
hound = { version = "3.5", default-features = false }
rustc-hash = "2.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
sys-info = "0.9.1"
libffi = "4.1.2"
libloading = "0.8.8"
libc = "0.2.175"
tar = "0.4.44"
flate2 = { version = "1.1.2", default-features = false, features = ["zlib"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "Response",
    "Headers",
    "RequestInit",
    "console",
    "Crypto",
    "Performance"
] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6.5"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
winres = "0.1.12"
sha2 = "0.10.9"
toml = { version = "0.9.5", default-features = false, features = ["serde", "parse"] }
chrono = "0.4.41"
rand = "0.9.2"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "lucia"
path = "src/main.rs"

[[bin]]
name = "lucia_wasm"
path = "src/main_wasm.rs"

[[bin]]
name = "run_tests"
path = "tests/source/run_tests.rs"

[[bin]]
name = "run_benchmarks"
path = "tests/source/run_benchmarks.rs"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 16
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
