[package]
name = "lucia"
version = "2.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
colored = "3.0.0"
imagnum = "0.2.29"
once_cell = { version = "1.21.3", default-features = false }
regex = "1.12.2"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
reqwest = { version = "0.12.24", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
fancy-regex = { version = "0.16.2", optional = true }
bincode = "2.0.1"
zstd = "0.13.3"
symphonia = { version = "0.5.5", default-features = false, features = [
    "mp3",
    "aac",
    "wav",
], optional = true }
hound = { version = "3.5", default-features = false, optional = true }
rustc-hash = "2.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
sys-info = "0.9.1"
libffi = { version = "4.1.2", optional = true }                               # DO NOT UPDATE TO 5.x.x IT BREAKS EVERYTHING
libloading = { version = "0.8.9", optional = true }
libc = "0.2.177"
tar = "0.4.44"
flate2 = { version = "1.1.5", default-features = false, features = ["zlib"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.104", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = [
    "Window",
    "Request",
    "Response",
    "Headers",
    "RequestInit",
    "console",
    "Crypto",
    "Performance",
] }
js-sys = "0.3.81"
serde-wasm-bindgen = "0.6.5"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
winres = "0.1.12"
sha2 = "0.10.9"
toml = { version = "0.9.8", default-features = false, features = [
    "serde",
    "parse",
] }
chrono = "0.4.41"
rand = "0.9.2"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "lucia"
path = "src/main.rs"

[[bin]]
name = "lucia_wasm"
path = "src/main_wasm.rs"

[[bin]]
name = "run_tests"
path = "tests/source/run_tests.rs"

[[bin]]
name = "run_benchmarks"
path = "tests/source/run_benchmarks.rs"

[features]
lucia_std = [
    "request",
    "math",
    "os",
    "time",
    "json",
    "regex",
    "collections",
    "random",
    "fs",
    "clib",
    "lasm",
    "nest",
    "libload",
    "elevator",
]

request = []
math = []
os = []
time = []
json = []
regex = ["dep:fancy-regex"]
collections = []
random = ["imagnum/random"]
fs = ["dep:symphonia", "dep:hound"]
clib = []
lasm = []
nest = []
libload = ["dep:libloading", "dep:libffi"]
elevator = []

preprocessor_include_std = []
preprocessor_linking = []

default = ["lucia_std", "preprocessor_linking"]

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 16
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
