[package]
name = "lucia"
version = "2.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
colored = "3.0.0"
imagnum = "0.2.29"
once_cell = { version = "1.21.3", default-features = false }
regex = "1.12.2"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
reqwest = { version = "0.12.28", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_urlencoded = "0.7.1"
sha2 = "0.10.9"
fancy-regex = { version = "0.17", optional = true }
bincode = "2.0.1"  # fuck you doxxers
zstd = "0.13.3"
rustc-hash = "2.1.1"
parking_lot = "0.12.5"
lasm = { version = "1.0.4", package = "lucia-lasm", optional = true }

# [target.'cfg(feature = "hash")'.dependencies]
md5 = { version = "0.8.0", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha3 = { version = "0.10.8", optional = true }
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.8.2", optional = true }
ripemd = { version = "0.1.3", optional = true }
argon2 = { version = "0.5.3", optional = true }
pbkdf2 = { version = "0.12.2", optional = true }
scrypt = { version = "0.11.0", optional = true }
bcrypt = { version = "0.17.1", optional = true }
crc32fast = { version = "1.5.0", optional = true }
fnv = { version = "1.0.7", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
sys-info = "0.9.1"
libffi = { version = "4.1.2", optional = true }                               # DO NOT UPDATE TO 5.x.x IT BREAKS EVERYTHING
libloading = { version = "0.9", optional = true }
libc = "0.2.178"
tar = "0.4.44"
flate2 = { version = "1.1.5", default-features = false, features = ["zlib"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
reedline = { version = "0.44.0", features = ["system_clipboard"] }
nu-ansi-term = "0.50.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.106", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Window",
    "Request",
    "Response",
    "Headers",
    "RequestInit",
    "console",
    "Crypto",
    "Performance",
] }
js-sys = "0.3.83"
serde-wasm-bindgen = "0.6.5"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
sha2 = "0.10.9"
toml = { version = "0.9.8", default-features = false, features = [
    "serde",
    "parse",
] }
chrono = "0.4.41"
rand = "0.9.2"
uuid = { version = "1.19", features = ["v4"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[[bin]]
name = "lucia"
path = "src/main.rs"

[[bin]]
name = "lucia_wasm"
path = "src/main_wasm.rs"

[[bin]]
name = "run_tests"
path = "tests/source/run_tests.rs"

[[bin]]
name = "run_benchmarks"
path = "tests/source/run_benchmarks.rs"

[features]
lucia_std = [
    "request",
    "math",
    "os",
    "time",
    "json",
    "regex",
    "collections",
    "random",
    "fs",
    "clib",
    "lasm",
    "nest",
    "libload",
    "elevator",
    "hash",
]

request = []
math = []
os = []
time = []
json = []
regex = ["dep:fancy-regex"]
collections = []
random = ["imagnum/random"]
fs = []
clib = []
lasm = ["dep:lasm"]
nest = []
libload = ["dep:libloading", "dep:libffi"]
elevator = []
hash = [
    "dep:md5",
    "dep:sha1",
    "dep:sha3",
    "dep:blake2",
    "dep:blake3",
    "dep:ripemd",
    "dep:argon2",
    "dep:pbkdf2",
    "dep:scrypt",
    "dep:bcrypt",
    "dep:crc32fast",
    "dep:fnv",
]

preprocessor_include_std = []
preprocessor_linking = []

default = ["lucia_std", "preprocessor_linking"]

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 16
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
strip = false
panic = "abort"
